# example-ic-logger

./: Cargo.toml  README.md  dfx.json  reinstall.sh
src/ic_logger/: Cargo.toml  build.rs  config.json
src/ic_logger/src/: lib.rs  logger.rs
