[package]
name = "ic_logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
log = "0.4.17"
serde = { version = "1.0.139", features = ["derive"] }

[build-dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82" }